fix: align in home page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -222,7 +222,7 @@ tr:nth-child(even) {
   }
 
   .home-content {
-    margin-left: 20%;
+    margin-left: 22%;
     max-width: 60vw;
   }
 }
